# libwatchfish

./: CMakeLists.txt  calendarevent.cpp  calendarevent.h  calendarsource.cpp  calendarsource.h  calendarsource_p.h  callchannelobserver.cpp  callchannelobserver.h  libwatchfish.pri  libwatchfish.pro  musiccontroller.cpp  musiccontroller.h  musiccontroller_kirigami.cpp  musiccontroller_p.h  musiccontroller_sailfish.cpp  musiccontroller_ubuntu.cpp  notification.cpp  notification.h  notificationmonitor.cpp  notificationmonitor.h  notificationmonitor_p.h  soundprofile.cpp  soundprofile.h  voicecallcontroller.h  voicecallcontroller_p.h  voicecallcontroller_sailfish.cpp  voicecallcontroller_sailfish.h  voicecallcontroller_ubuntu.cpp  voicecallcontroller_ubuntu.h  voicecallcontrollerbase.cpp  voicecallcontrollerbase.h  volumecontroller.h  volumecontroller_p.h  walltimemonitor.cpp  walltimemonitor.h  walltimemonitor_p.h  watchfish.pro
